fix z-index

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,6 @@
     position: absolute;
     top: calc(50% - 4px);
     left: 50%;
-    z-index: 1;
 
     width: 40%;
     height: 8px;
@@ -30,6 +29,7 @@
     position: absolute;
     top: calc(50% - 5px);
     left: 50%;
+    z-index: -1;
 
     width: 30%;
     height: 10px;
@@ -52,14 +52,13 @@
 
   &__axis {
     position: absolute;
-    z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
     width: 16px;
     height: 16px;
-    
+
     background-color: rgb(43, 140, 250);
     border-radius: 8px;
   }
